[tool.poetry]
name = "tasks"
version = "0.1.0"
description = ""
authors = ["Mikhail <podbereznikov34@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standart"], version = "^0.29.0"}
pytest = "^8.2.0"
sqlalchemy = "^2.0.30"
databases = "^0.9.0"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
